--- a/book/book.tex
+++ b/book/book.tex
@@ -10368,37 +10368,37 @@ Solución: \url{http://thinkpython2.com/code/reducible.py}.
 
 
 
-\chapter{Case study: data structure selection}
+\chapter{Estudio de caso: selección de estructura de datos}
 
-At this point you have learned about Python's core data structures,
-and you have seen some of the algorithms that use them.
-If you would like to know more about algorithms, this might be a good
-time to read Chapter~\ref{algorithms}.
-But you don't have to read it before you go on; you can read
-it whenever you are interested.
+En este punto has aprendido sobre las estructuras de datos de Python esenciales,
+y has visto algunos de los algoritmos que los usan.
+Si te gustaría saber más sobre algoritmos, este podría ser un buen
+momento para leer el Capítulo~\ref{algorithms}.
+Sin embargo, no tienes que leerlo antes de continuar; puedes leerlo
+cuando estés interesado.
 
-This chapter presents a case study with exercises that let
-you think about choosing data structures and practice using them.
+Este capítulo presenta un estudio de caso con ejercicios que te hacen
+pensar sobre escoger estructuras de datos y practicar usándolos.
 
 
-\section{Word frequency analysis}
+\section{Análisis de frecuencia de palabras}
 \label{analysis}
 
-As usual, you should at least attempt the exercises
-before you read my solutions.
+Como siempre, deberías al menos intentar los ejercicios
+antes de que leas mis soluciones.
 
 \begin{exercise}
 
-Write a program that reads a file, breaks each line into
-words, strips whitespace and punctuation from the words, and
-converts them to lowercase.
-\index{string module}
-\index{module!string}
+Escribe un programa que lea un archivo, separe cada línea en
+palabras, quite los espacios en blanco y la puntuación de las palabras,
+y las convierta minúsculas.
+\index{módulo string}
+\index{string!módulo}
 
-Hint: The {\tt string} module provides a string named {\tt whitespace},
-which contains space, tab, newline, etc., and {\tt
-  punctuation} which contains the punctuation characters.  Let's see
-if we can make Python swear:
+Pista: El módulo {\tt string} proporciona una cadena con nombre {\tt whitespace},
+que contiene los caracteres de espacio, tabulación, nueva línea, etc.,
+y {\tt puntuación} que contiene los caracteres de puntuación.  Veamos
+si podemos hacer que Python diga groserías:
 
 \begin{verbatim}
 >>> import string
@@ -10406,14 +10406,14 @@ if we can make Python swear:
 '!"#$%&\'()*+,-./:;<=>?@[\\]^_`{|}~'
 \end{verbatim}
 %
-Also, you might consider using the string methods {\tt strip},
-{\tt replace} and {\tt translate}.
-\index{strip method}
-\index{method!strip}
-\index{replace method}
-\index{method!replace}
-\index{translate method}
-\index{method!translate}
+Además, podrías considerar el uso de los métodos de cadena {\tt strip},
+{\tt replace} y {\tt translate}.
+\index{método strip}
+\index{strip!método}
+\index{método replace}
+\index{replace!método}
+\index{método translate}
+\index{translate!método}
 
 \end{exercise}
 
@@ -10421,77 +10421,77 @@ Also, you might consider using the string methods {\tt strip},
 \begin{exercise}
 \index{Project Gutenberg}
 
-Go to Project Gutenberg (\url{http://gutenberg.org}) and download
-your favorite out-of-copyright book in plain text format.
-\index{plain text}
-\index{text!plain}
+Ve a Project Gutenberg (\url{http://gutenberg.org}) y descarga
+tu libro sin derechos de autor favorito en formato de texto plano.
+\index{texto plano}
+\index{plano!texto}
 
-Modify your program from the previous exercise to read the book
-you downloaded, skip over the header information at the beginning
-of the file, and process the rest of the words as before.
+Modifica tu programa del ejercicio anterior para que lea el libro
+que descargaste, se salte la información del encabezado al principio
+del archivo y procese el resto de las palabras como antes.
 
-Then modify the program to count the total number of words in
-the book, and the number of times each word is used.
-\index{word frequency}
-\index{frequency!word}
+Luego modifica el programa para que cuente el número total de palabras en
+el libro y el número de veces que se usa cada palabra.
+\index{frecuencia de palabras}
+\index{palabras!frecuencia de}
 
-Print the number of different words used in the book.  Compare
-different books by different authors, written in different eras.
-Which author uses the most extensive vocabulary?
+Imprime el número de palabras diferentes usadas en el libro.  Compara
+libros diferentes de autores diferentes, escritos en épocas diferentes..
+¿Qué autor usa el vocabulario más extenso?
 \end{exercise}
 
 
 \begin{exercise}
 
-Modify the program from the previous exercise to print the
-20 most frequently used words in the book.
+Modifica el programa del ejercicio anterior para que imprima las
+20 palabras usadas con mayor frecuencia en el libro.
 
 \end{exercise}
 
 
 \begin{exercise}
 
-Modify the previous program to read a word list (see
-Section~\ref{wordlist}) and then print all the words in the book that
-are not in the word list.  How many of them are typos?  How many of
-them are common words that {\em should} be in the word list, and how
-many of them are really obscure?
+Modifica el programa anterior para que lea una lista de palabras (ver
+Sección~\ref{wordlist}) y luego imprima todas las palabras del libro que
+no están en la lista de palabras.  ¿Cuántas de ellas son errores tipográficos?
+¿Cuántas de ellas son palabras comunes que {\em deberían} estar en la lista
+de palabras y cuántas de ellas son realmente oscuras?
 
 \end{exercise}
 
 
-\section{Random numbers}
-\index{random number}
-\index{number, random}
-\index{deterministic}
-\index{pseudorandom}
+\section{Números aleatorios}
+\index{número aleatorio}
+\index{aleatorio, número}
+\index{determinista}
+\index{pseudoaleatorio}
 
-Given the same inputs, most computer programs generate the same
-outputs every time, so they are said to be {\bf deterministic}.
-Determinism is usually a good thing, since we expect the same
-calculation to yield the same result.  For some applications, though,
-we want the computer to be unpredictable.  Games are an obvious
-example, but there are more.
+Dadas las mismas entradas, la mayoría de los programas de computador generan
+las mismas salidas cada vez, por lo que se dice que son {\bf deterministas}.
+El determinismo es usualmente algo bueno, ya que esperamos que los mismos
+calculos produzcan el mismo resultado.  Para algunas aplicaciones, sin embargo,
+queremos que el computador sea impredecible.  Los juegos son un ejemplo
+obvio, pero hay más.
 
-Making a program truly nondeterministic turns out to be difficult,
-but there are ways to make it at least seem nondeterministic.  One of
-them is to use algorithms that generate {\bf pseudorandom} numbers.
-Pseudorandom numbers are not truly random because they are generated
-by a deterministic computation, but just by looking at the numbers it
-is all but impossible to distinguish them from random.
-\index{random module}
-\index{module!random}
+Hacer un programa verdaderamente no determinista resulta ser difícil,
+pero hay maneras de hacer que al menos parezca no determinista.  Una de
+ellas es usar algoritmos que generen números {\bf pseudoaleatorios}.
+Los números pseudoaleatorios no son verdaderamente aleatorios porque se generan
+por una computación determinista, pero solo mirando a los números
+es casi imposible distinguirlos de los aleatorios.
+\index{módulo random}
+\index{random!módulo}
 
-The {\tt random} module provides functions that generate
-pseudorandom numbers (which I will simply call ``random'' from
-here on).
-\index{random function}
-\index{function!random}
+El módulo {\tt random} proporciona funciones que generan
+números pseudoaleatorios (que simplemente llamaré ``aleatorios'' desde
+aquí en adelante).
+\index{función random}
+\index{random!función}
 
-The function {\tt random} returns a random float
-between 0.0 and 1.0 (including 0.0 but not 1.0).  Each time you
-call {\tt random}, you get the next number in a long series.  To see a
-sample, run this loop:
+La función {\tt random} devuelve un número de coma flotante aleatorio
+entre 0.0 y 1.0 (incluyendo 0.0 pero no 1.0).  Cada vez que
+llamas a {\tt random}, obtienes el siguiente número en de una larga serie.
+Para ver una muestra, ejecuta este bucle:
 
 \begin{verbatim}
 import random
@@ -10501,11 +10501,11 @@ for i in range(10):
     print(x)
 \end{verbatim}
 %
-The function {\tt randint} takes parameters {\tt low} and
-{\tt high} and returns an integer between {\tt low} and
-{\tt high} (including both).
-\index{randint function}
-\index{function!randint}
+La función {\tt randint} toma los parámetros {\tt low} y
+{\tt high} y devuelve un entero entre {\tt low} y
+{\tt high} (incluyendo a ambos).
+\index{función randint}
+\index{randint!función}
 
 \begin{verbatim}
 >>> random.randint(5, 10)
@@ -10514,10 +10514,10 @@ The function {\tt randint} takes parameters {\tt low} and
 9
 \end{verbatim}
 %
-To choose an element from a sequence at random, you can use
+Para escoger un elemento de una secuencia de manera aleatoria, puedes usar
 {\tt choice}:
-\index{choice function}
-\index{function!choice}
+\index{función choice}
+\index{choice!función}
 
 \begin{verbatim}
 >>> t = [1, 2, 3]
@@ -10527,65 +10527,65 @@ To choose an element from a sequence at random, you can use
 3
 \end{verbatim}
 %
-The {\tt random} module also provides functions to generate
-random values from continuous distributions including
-Gaussian, exponential, gamma, and a few more.
+El módulo {\tt random} también proporciona funciones para generar
+valores aleatorios a partir de distribuciones continuas incluyendo
+la gaussiana, exponencial, gamma y algunas más.
 
 \begin{exercise}
-\index{histogram!random choice}
+\index{histograma!elección aleatoria}
 
-Write a function named \verb"choose_from_hist" that takes
-a histogram as defined in Section~\ref{histogram} and returns a
-random value from the histogram, chosen with probability
-in proportion to frequency.  For example, for this histogram:
+Escribe una función con nombre \verb"escoger_de_hist" que tome
+un histograma como se definió en la Sección~\ref{histogram} y devuelva un
+valor aleatorio del histograma, esogido con probabilidad
+proporcional a la frecuencia.  Por ejemplo, para este histograma:
 
 \begin{verbatim}
 >>> t = ['a', 'a', 'b']
->>> hist = histogram(t)
+>>> hist = histograma(t)
 >>> hist
 {'a': 2, 'b': 1}
 \end{verbatim}
 %
-your function should return \verb"'a'" with probability $2/3$ and \verb"'b'"
-with probability $1/3$.
+tu función debería devolver \verb"'a'" con probabilidad $2/3$ y \verb"'b'"
+con probabilidad $1/3$.
 \end{exercise}
 
 
-\section{Word histogram}
+\section{Histograma de palabras}
 
-You should attempt the previous exercises before you go on.
-You can download my solution from
- \url{http://thinkpython2.com/code/analyze_book1.py}.  You will
-also need \url{http://thinkpython2.com/code/emma.txt}.
+Deberías intentar los ejemplos anteriores antes de continuar.
+Puedes descargar mi solución en
+ \url{http://thinkpython2.com/code/analyze_book1.py}.  Además
+necesitarás \url{http://thinkpython2.com/code/emma.txt}.
 
-Here is a program that reads a file and builds a histogram of the
-words in the file:
-\index{histogram!word frequencies}
+Aquí hay un programa que lee un archivo y construye un histograma de las
+palabras en el archivo:
+\index{histograma!frecuencia de palabras}
 
 \begin{verbatim}
 import string
 
-def process_file(filename):
+def procesar_archivo(nombre_archivo):
     hist = dict()
-    fp = open(filename)
-    for line in fp:
-        process_line(line, hist)
+    fp = open(nombre_archivo)
+    for linea in fp:
+        procesar_linea(linea, hist)
     return hist
 
-def process_line(line, hist):
-    line = line.replace('-', ' ')
+def procesar_linea(linea, hist):
+    linea = linea.replace('-', ' ')
 
-    for word in line.split():
-        word = word.strip(string.punctuation + string.whitespace)
-        word = word.lower()
-        hist[word] = hist.get(word, 0) + 1
+    for palabra in linea.split():
+        palabra = palabra.strip(string.punctuation + string.whitespace)
+        palabra = palabra.lower()
+        hist[palabra] = hist.get(palabra, 0) + 1
 
-hist = process_file('emma.txt')
+hist = procesar_archivo('emma.txt')
 \end{verbatim}
 %
-This program reads {\tt emma.txt}, which contains the text of {\em
-  Emma} by Jane Austen.
-\index{Austin, Jane}
+Este programa lee {\tt emma.txt}, el cual contiene el texto de {\em
+  Emma} de Jane Austen.
+\index{Austen, Jane}
 
 \verb"process_file" loops through the lines of the file,
 passing them one at a time to \verb"process_line".  The histogram
